--- a/css/custom.css
+++ b/css/custom.css
@@ -58,3 +58,81 @@
     top: 110px;
     left: 30%;
 }
+
+@media screen and (max-width: 768px) {
+    .looking-for-bit {
+        display: none;
+    }
+}
+
+.looking-for-bit {
+    position: absolute;
+    top:0;
+    right:0;
+}
+
+.looking-for-bit p {
+    font-size: 14px;
+    position: relative;
+    right: 70px;
+    text-align: right;
+}
+
+.looking-for-bit img {
+    height: 45px;
+}
+
+.curl {
+    display: block;
+    width:60px;
+    height:60px;
+    position: absolute;
+    top:0;
+    right:0;
+    background :
+            linear-gradient(
+                    225deg,
+                    #fcb1ca,
+                    #fcb1ca 45%,
+                    #fcb1ca 50%,
+                    #aaa 50%,
+                    #bbb 56%,
+                    #ccc 62%,
+                    #f3f3f3 80%,
+                    #fff 100%
+            );
+    box-shadow : 0 0 10px rgba(0, 0, 0, .5);
+    transition: all .5s ease;
+    z-index: 10;
+}
+/*.curl:before,*/
+/*.curl:after {*/
+/*    content: '';*/
+/*    position: absolute;*/
+/*    z-index: -1;*/
+/*    left: 12.5%;*/
+/*    bottom: 5.8%;*/
+/*    width: 70%;*/
+/*    max-width: 300px;*/
+/*    max-height: 100px;*/
+/*    height: 55%;*/
+/*    box-shadow: 0 12px 15px rgba(0, 0, 0, .3);*/
+/*    transform: skew(-10deg) rotate(-6deg);*/
+/*}*/
+.curl:after {
+    left: auto;
+    right: 5.8%;
+    bottom: auto;
+    top: 14.16%;
+    transform: skew(-15deg) rotate(-84deg);
+}
+
+.curl:hover {
+    width: 120px;
+    height: 120px;
+    cursor: pointer;
+}
+/*.curl:hover:before,*/
+/*.curl:hover:after {*/
+/*    box-shadow: 0 24px 30px rgba(0, 0, 0, .3);*/
+/*}*/
