--- a/css/layout/_header.scss
+++ b/css/layout/_header.scss
@@ -203,6 +203,7 @@
                         a {
                             display: block;
                             padding: .833rem 1.667rem .833rem 0;
+                            white-space: pre;
                             @include atMedium {
                                 padding: .625rem 1.25rem .625rem 0;
                             }
