--- a/css/main.scss
+++ b/css/main.scss
@@ -13,6 +13,7 @@
 @import "components/embed-container";
 @import "components/tech-talks";
 @import "components/looking-for-bit";
+@import "components/index";
 @import "layout/grid";
 @import "layout/header";
 @import "layout/footer";
