--- a/css/layout/_grid.scss
+++ b/css/layout/_grid.scss
@@ -7,3 +7,11 @@
         padding-right: 15px;
     }
 }
+
+.row.white {
+    background: #fafafa;
+    box-shadow: inset 0px 2px 7px 0px rgba(0,0,0,0.64);
+     h2, p {
+         color: black;
+     }
+}
