--- a/css/base/_utilities.scss
+++ b/css/base/_utilities.scss
@@ -14,3 +14,15 @@
         }
     }
 }
+
+.row-padding {
+ padding: 50px 0;
+}
+
+.col-md-middle {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+
