--- a/css/main.css
+++ b/css/main.css
@@ -1,8 +1,13 @@
+@import "components/aos.css";
 @font-face {
   font-family: "Roobert";
   font-weight: 500;
   src: url("../fonts/RoobertMedium.ttf");
 }
+.blue {
+  color: #33C1D3;
+}
+
 html,
 body {
   overflow-x: hidden;
@@ -101,6 +106,20 @@ textarea:focus {
   background-color: #33C1D3;
 }
 
+.curl:after {
+  left: auto;
+  right: 5.8%;
+  bottom: auto;
+  top: 14.16%;
+  transform: skew(-15deg) rotate(-84deg);
+}
+
+.curl:hover {
+  width: 120px;
+  height: 120px;
+  cursor: pointer;
+}
+
 .h1, h1 {
   font-family: "Roobert", "Helvetica", "Arial", sans-serif;
   font-size: 4rem;
@@ -186,12 +205,6 @@ li {
   color: #ffffff;
 }
 @media screen and (min-width: 768px) {
-  .p, .tag, .btn, p,
-li {
-    font-size: 1rem;
-  }
-}
-@media screen and (min-width: 768px) {
   .p--lg, .header__nav > ul > li > ul > li, .header__nav > ul > li {
     font-size: 1.125rem;
   }
@@ -261,6 +274,7 @@ li {
   display: inline-flex;
   align-items: center;
   justify-content: center;
+  background: #20C6D7;
 }
 .btn:link, .btn:hover, .btn:active, .btn:focus, .btn:visited {
   color: #ffffff;
@@ -273,31 +287,15 @@ li {
     font-size: 1.25rem;
   }
 }
-.btn:before, .btn:after {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  transition: all 0.25s;
-  backface-visibility: hidden;
-}
-.btn:before {
-  z-index: 1;
-  background-image: linear-gradient(to right, #20C6D7, #57BE8E);
-}
-.btn:after {
-  z-index: 2;
-  opacity: 0;
-  background-image: linear-gradient(to right, #199dab, #3fa374);
-}
 .btn span {
   position: relative;
   z-index: 3;
 }
-.btn:hover:after {
-  opacity: 1;
+.btn.green {
+  background: #57BE8E;
+}
+.btn:hover {
+  opacity: 0.9;
 }
 
 .tag {
@@ -651,48 +649,24 @@ li {
   z-index: 10;
 }
 
-@media screen and (min-width: 768px) {
-  .index .want-to-be {
-    background-size: 50% auto;
-    background-image: url("/images/2596842.svg");
-    background-repeat: no-repeat;
-    background-position: right center;
-  }
-}
 .index .txt-rotate {
   white-space: nowrap;
 }
-.index .paths-container img {
-  display: none;
-}
-.index .paths-container img.active {
-  display: block;
-}
-.index .paths {
+.index .counted .item {
   display: flex;
-  flex-direction: column;
-  margin: 20px 0;
-}
-.index .paths a {
-  display: block;
+  align-items: center;
   margin: 10px 0;
-  border-radius: 5px;
-  padding: 20px 10px;
-  width: 100%;
-  border: 2px solid lightgray;
-  box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.15);
 }
-.index .paths a.active.blue, .index .paths a:hover.blue {
-  border-color: #20C6D7;
-  color: #20C6D7;
-}
-.index .paths a.active.dark-blue, .index .paths a:hover.dark-blue {
-  border-color: #000563;
-  color: #000563;
-}
-.index .paths a.active.red, .index .paths a:hover.red {
-  border-color: #EE5965;
-  color: #EE5965;
+.index .counted .item span {
+  margin-right: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 25px;
+  width: 25px;
+  border-radius: 25px;
+  background: #EE5965;
+  font-size: 1rem;
 }
 
 .container,
@@ -1015,6 +989,16 @@ li {
   .w-md-100 {
     width: 100%;
   }
+}
+
+.row-padding {
+  padding: 50px 0;
+}
+
+.col-md-middle {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 /*# sourceMappingURL=main.css.map */
