--- a/css/abstracts/_variables.scss
+++ b/css/abstracts/_variables.scss
@@ -1,7 +1,7 @@
 // Colors
 $color-primary: #000563;
 
-$color-accent-1: #33C1D3;
+$color-accent-1: #33c1d3;
 $color-accent-2: #EE5965;
 $color-accent-3: #5ABF8F;
 $color-accent-4: #20C6D7;
