--- a/css/main.css
+++ b/css/main.css
@@ -664,6 +664,8 @@ li {
   justify-content: center;
   height: 25px;
   width: 25px;
+  min-height: 25px;
+  min-width: 25px;
   border-radius: 25px;
   background: #EE5965;
   font-size: 1rem;
@@ -827,6 +829,9 @@ li {
   align-items: center;
   justify-content: center;
   position: relative;
+}
+.header__nav > ul > li a {
+  white-space: nowrap;
 }
 .header__nav > ul > li span:after {
   content: "";
