--- a/css/main.css
+++ b/css/main.css
@@ -615,7 +615,7 @@ li {
   position: absolute;
   top: 0;
   right: 0;
-  z-index: 9999;
+  z-index: 2;
 }
 @media screen and (max-width: 768px) {
   .looking-for-bit {
@@ -702,7 +702,7 @@ li {
 .header {
   padding: 2.5rem 0;
   position: relative;
-  z-index: 4;
+  z-index: 3;
 }
 @media screen and (min-width: 768px) {
   .header {
@@ -1008,6 +1008,10 @@ li {
   display: flex;
   flex-direction: column;
   justify-content: center;
+}
+
+.typeform-modal {
+  z-index: 1200;
 }
 
 /*# sourceMappingURL=main.css.map */
