Added 'plan kennismaking' button

--- a/css/main.scss
+++ b/css/main.scss
@@ -14,6 +14,7 @@
 @import "components/tech-talks";
 @import "components/looking-for-bit";
 @import "components/index";
+@import "components/calendly";
 @import "layout/grid";
 @import "layout/header";
 @import "layout/footer";
