--- a/css/main.css
+++ b/css/main.css
@@ -653,6 +653,11 @@ li {
   border-radius: 25px;
   background: #EE5965;
   font-size: 1rem;
+  flex-shrink: 0;
+}
+
+.subtext {
+  color: gray;
 }
 
 .card {
