--- a/css/main.css
+++ b/css/main.css
@@ -630,7 +630,7 @@ li {
   position: absolute;
   top: 0;
   right: 0;
-  background: linear-gradient(225deg, #fcb1ca, #fcb1ca 45%, #fcb1ca 50%, #aaa 50%, #bbb 56%, #ccc 62%, #f3f3f3 80%, #fff 100%);
+  background: linear-gradient(225deg, #fff, #fff 45%, #fff 50%, #aaa 50%, #bbb 56%, #ccc 62%, #f3f3f3 80%, #fff 100%);
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
   z-index: 10;
 }
