--- a/css/layout/_footer.scss
+++ b/css/layout/_footer.scss
@@ -43,9 +43,14 @@
 
     &__voorwaarden {
         text-align: center;
+        font-size: 10px;
 
         a {
             color: white;
+
+            &:hover {
+                text-decoration: underline;
+            }
         }
     }
 }
