Updated open dag pagina

--- a/css/layout/_header.scss
+++ b/css/layout/_header.scss
@@ -129,6 +129,18 @@
                     font-size: 1.125rem;
                 }
 
+                a {
+                    white-space: nowrap;
+
+                    &.highlight {
+                        color: yellow;
+
+                        &:hover {
+                            color: $color-accent-1;
+                        }
+                    }
+                }
+
                 span {
                     cursor: pointer;
                     transition: all .25s;
