--- a/css/main.scss
+++ b/css/main.scss
@@ -28,3 +28,24 @@
 .font-smaller {
   font-size: 80%;
 }
+
+.counted {
+  .item {
+    display: flex;
+    align-items: center;
+    margin: 10px 0;
+
+    span {
+      margin-right: 20px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      height: 25px;
+      width: 25px;
+      border-radius: 25px;
+      background: $color-accent-2;
+      font-size: 1rem;
+      flex-shrink: 0;
+    }
+  }
+}
