--- a/css/main.scss
+++ b/css/main.scss
@@ -49,3 +49,34 @@
     }
   }
 }
+
+html {
+  a.winnaar {
+    color: white !important;
+    font-size: 50px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border: 1px solid white;
+    padding-top: 21px;
+    background: #000563;
+    position: relative;
+    transform: scale(0.8);
+
+    @media screen and (min-width: 768px) {
+      position: absolute;
+      top: 70px;
+      right: 10px;
+      transform: scale(0.5) rotate(15deg);
+      line-height: 30px;
+    }
+
+    @media screen and (min-width: 1024px) {
+      top: 100px;
+    }
+
+    &:hover {
+      border-color: yellow;
+    }
+  }
+}
